CLEANFILES = *~

#SUBDIRS =

INCLUDES = -I$(top_srcdir) -I$(top_builddir)
# $(GLIBMM_CFLAGS)

# lib_LTLIBRARIES = libdtfilt.la

# libdtfilt_la_SOURCES =

# libdtfilt_la_LDFLAGS = -version-info 3:0:0

# pkginclude_HEADERS =

filt_PROGRAMS = testfilter

testfilter_SOURCES = testfilter.cpp
testfilter_LDADD = -lpopt
